--- a/methods.Rmd
+++ b/methods.Rmd
@@ -7,11 +7,11 @@ output:
 
 ## VSEM (Very Simple Ecosystem Model)
 
-To illustrate the problem of assimilating disturbance, and present potential solutions, we make use of the Very Simple Ecosystem Model (VSEM), a daily-timestep point-scale model developed by David Cameron that is available in the BayesianTools R package [@BayesianTools]. VSEM contains three carbon pools, leaf (Cl), wood (Cw), and soil (Cs), and calculates leaf area index based on specific leaf area (SLA), $LAI = SLA*Cl$. Gross Primary Productivity (GPP) is estimated based on incoming photosynthetically active radiation (PAR), light use efficiency (LUE), and Beer's Law light interception ($1-exp(-K_{ext}\cdot LAI)$) with a extinction coefficient $K_{ext}$. Autotrophic respiration, Ra, is a fixed fraction, $\Gamma$ of GPP. Of the remaining carbon (net primary productivity), a fixed fraction, $Av$, is allocated to leaves and the remainder is allocated to wood. Leaves and wood turnover into soil C based on fixed longevities, $\tau_l$ and $\tau_w$, while heterotrophic respiration, Rh, occurs based on a fixed residence time $\tau_s$. Net Ecosystem Exchange follows the atmospheric sign convention $Ra + Rh - GPP$. The VSEM was selected for its speed and ease of understanding, but its fundamental structure is analogous to much more complex, large-scale terrestrial carbon models. 
+To illustrate the problem of assimilating disturbance, and present potential solutions, we make use of the Very Simple Ecosystem Model (VSEM), a daily-timestep point-scale model developed by David Cameron that is available in the BayesianTools R package [@BayesianTools]. VSEM contains three carbon pools, leaf (Cl), wood (Cw), and soil (Cs), and calculates leaf area index based on specific leaf area (SLA), $LAI = SLA*Cl$. Gross Primary Productivity (GPP) is estimated based on incoming photosynthetically active radiation (PAR), light use efficiency (LUE), and Beer's Law light interception ($1-exp(-K_{ext}\cdot LAI)$) with a extinction coefficient $K_{ext}$. Autotrophic respiration, Ra, is a fixed fraction, $\Gamma$ of GPP. Of the remaining carbon (net primary productivity), a fixed fraction, $Av$, is allocated to leaves and the remainder is allocated to wood. Leaves and wood turnover into soil C based on fixed longevities, $\tau_l$ and $\tau_w$, while heterotrophic respiration, Rh, occurs based on a fixed residence time $\tau_s$. Net Ecosystem Exchange follows the atmospheric sign convention $Ra + Rh - GPP$. The VSEM was selected for its speed and ease of understanding, but its fundamental structure is analogous to much more complex, large-scale terrestrial carbon models. Model calibration is discussed in the Supplementary material. 
 
 ## Ensemble Kalman Filter
 
-The Ensemble Kalman Filter (EnKF) [@Evensen2009; @Evensen2009a] is a popular data assimilation algorithm that we use to demonstrate the challenges conventional data assimilation approaches have with capturing discrete disturbances and as our jumping off point for developing more flexible methods. Like most data assimilation algorithms the EnKF involves two cyclic steps: a Forecast step where a model is used to probabilistically predict the system state (and any other outputs) forward in time, and an Analysis step where new observations are used to update system state variables (e.g. carbon pools) and sometimes model parameters (Figure \@ref(fig:conceptualFig)). These updated variables are then used as the initial conditions for the next Forecast round.
+The Ensemble Kalman Filter (EnKF) [@Evensen2009; @Evensen2009a] is a popular data assimilation algorithm that we use to demonstrate the challenges conventional data assimilation approaches have with capturing discrete disturbances and as our jumping off point for developing more flexible methods. Like most data assimilation algorithms the EnKF involves two cyclic steps: a Forecast step where a model is used to probabilistically predict the system state (and any other outputs) forward in time, and an Analysis step where new observations are used to update system state variables (e.g. carbon pools) (Figure \@ref(fig:conceptualFig)). These updated variables are then used as the initial conditions for the next Forecast round. Conceptually, EnKF can also be used to iteratively update both model states and parameters simultaneously, though for simplicity in the current application we focus on state updating. 
 
 Within the EnKF, the probabilistic Forecast step is performed using an ensemble of model runs that vary in at least initial conditions, but potentially also model parameters, drivers, and process error. The ensemble forecast approach is easy to apply to any model, is particularly good at capturing nonlinear predictions, and unlike many other approaches does not require solving for the adjoint of the model. In EnKF the multivariate forecast, $f$, at any point in time, $t$, is then summarized in terms of a vector of means across ensemble members, $\mu_{f,t}$ and the sample covariance, $P_{f,t}$. In our example we are interested in the three state variables in the VSEM, ${C_l,C_w,C_s}$, at a single site and assume an ensemble size of 200. Therefore $\mu_{f,t}$ is a vector of length 3 and $P_{f,t}$ is a $3 \times 3$ covariance matrix. If we were making a spatial forecast at $n_s$ locations, $\mu_{f,t}$ would be a vector of length $3 n_s$ and $P_{f,t}$ would be a $3 n_s \times 3 n_s$ covariance matrix that would capture the full set of correlations across both variables and space. An important difference between data assimilation and spatial statistics is that in data assimilation the spatial covariance matrix comes from (1) the mechanistic understanding embedded in our process model and (2) the spatial covariance in the forecast inputs (initial conditions, parameters, drivers, process error), rather than an empirical semivariogram.
 
@@ -173,7 +173,7 @@ exps = data.frame(exp=1:5,
                   PFTs = c(1,1,1,2,1),
                   sites = c(1,1,1,1,2)
                   )
-knitr::kable(exps,caption="Simulated data experiments")
+knitr::kable(exps,caption="Simulated data experiments. Exp = Experiment number, pools = number of C pools, disturbances = number of disturbance types, PFTs = number of alternative plant functional types, sites = number of sites.")
 ```
 
 For the second experiment, we used the VSEM to extend the single site, single disturbance example to a model with multiple pools. In this and the following simulated data experiments we used VSEM's default parameters, drawing ensemble members from Normal distributions centered on the prior mean and assuming a standard deviation that was 1/10th the default uniform prior range. The goal here was not to replicate any specific system, but to provide an amount of parameter uncertainty that was realistic but not so large as to generate trivial ensemble forecasts. Model runs were for 25 years using VSEM's default simulated PAR as the driver and with data assimilation occurring annually. Model initial conditions were generated by an initial 25 year ensemble spin-up prior to the 25 year experiment. Process error was added to the simulation annually assuming a zero-censored Normal (a.k.a. tobit) distribution with a process error covariance matrix that was diagonal with variances of 0.1 for all pools. Ensemble members experienced disturbance stochastically with a 5% annual probability. For the disturbance itself, the post-disturbance leaf and wood carbon were drawn from a tobit with a mean of 1 $kgC/m^2$ for both pools, standard deviations of 0.15 and 0.25 respectively, and 25% of the biomass lost was assumed to enter the soil C pool, with the remainder removed (which could be thought of as either atmospheric emissions or biomass harvest depending on the disturbance type). 
@@ -188,7 +188,7 @@ Our fifth experiment extended the analysis to a two-site scenario with spatial c
      
 ## Remotely-sensed disturbance in Oregon
 
-Having tested the Multinomial assimilation against simulated data we next applied the algorithm to multiple remotely-sensed disturbance types for an evergreen forested region in the central Oregon Cascades, USA. In summary, we: (1) calibrated VSEM against field data; (2) used a remotely-sensed disturbance product to construct priors for disturbance rates and PFT transitions; (3) extracted and assimilated ~400 time-series of remotely sensed aboveground biomass, stratified by different disturbance types; and then (4) assessed the ability of the algorithm to detect different disturbances types and magnitudes. Model calibration is discussed in the Supplementary material.
+Having tested the Multinomial assimilation against simulated data we next applied the algorithm to multiple remotely-sensed disturbance types for an evergreen forested region in the central Oregon Cascades, USA. In summary, we: (1) calibrated VSEM against field data; (2) used a remotely-sensed disturbance product to construct priors for disturbance rates and PFT transitions; (3) extracted and assimilated ~400 time-series of remotely sensed aboveground biomass, stratified by different disturbance types; and then (4) assessed the ability of the algorithm to detect different disturbances types and magnitudes.
 
 ### Remotely-sensed data sources
 
@@ -246,7 +246,7 @@ Our Multinomial disturbance assimilation model takes as priors the disturbance p
 
 To assess the performance of the Multinomial assimilation algorithm against real-world data, we sampled ~100 evergreen forest points for each disturbance class. We specifically sampled disturbance locations from the year 2004, which is sufficiently deep in the past that there is an observable disturbance recovery trajectory, but with a sufficiently long time-series prior to disturbance for the data assimilation to come into steady-state with the biomass data product. For each selected location we extracted a time-series from the remotely-sensed biomass product as the assimilation data constraint. The cover and disturbance products were not assimilated, but were just used to construct priors and assess performance.
 
-For each location we next extracted PAR driver data from the Daymet product [@thornton2021] using the daymetr R package [@daymetr]. For each location carbon pools were initialized using a multi-step process to account for the lack of leaf and soil C data at a landscape scale. To start we used the first time point in each biomass time-series as the initial condition for the wood pool. Next, using the US-ME2 initial conditions we performed a >10k year spin-up, and then sampled carbon pool ensemble members from the second half of this time-series. Next, for each ensemble member we imposed at disturbance that reduced wood and leaf biomass to 1% of their equilibrium values, then simulated a 200-year recovery trajectory. Finally, for each ensemble member we selected the stand age that minimized the squared error between the modeled biomass and the initial biomass, and then selected the leaf and soil C pools at that stand age. This results is an ensemble of leaf, wood, and soil carbon pools with a covariance structure that is consistent with the calibrated model's dynamics.
+For each location we next extracted PAR driver data from the Daymet product [@thornton2021] using the daymetr R package [@daymetr]. For each location carbon pools were initialized using a multi-step process to account for the lack of leaf and soil C data at a landscape scale. To start we used the first time point in each biomass time-series as the initial condition for the wood pool. Next, using the US-ME2 initial conditions we performed a >10k year spin-up, and then sampled carbon pool ensemble members from the second half of this time-series. Next, for each ensemble member we imposed at disturbance that reduced wood and leaf biomass to 1% of their equilibrium values, then simulated a 200-year recovery trajectory. Finally, for each ensemble member we selected the stand age that minimized the squared error between the modeled biomass and the initial biomass, and then selected the leaf and soil C pools at that stand age. This results in an ensemble of leaf, wood, and soil carbon pools with a covariance structure that is consistent with the calibrated model's dynamics.
 
 For the assimilation experiment, each site was assimilated separately. In the initial round of experiments the observation error was set to a standard deviation of $4.2\: kg/m^2$ based on [@Kennedy2018] Figure 2. Post-assimilation, we then extracted a number of metrics to assess algorithm performance: the posterior probability of disturbance in 2004, the posterior biomass pool size before disturbance, after disturbance, and at the end of the time-series (2017).
 One thing we wanted to assess with the Multinomial filter is the extent of filter divergence, the situation where the model in a data assimilation algorithm becomes so confident in itself that assimilated observations have little impact on the posterior, which then diverges from observations.
@@ -261,5 +261,5 @@ Finally, based on preliminary results we performed a series of additional assimi
 ## summary table of experiments
 load("QRexp.RData")
 QRexp = data.frame(experiment=1:6,Qmult=Qmult[Qs],Rmult=Rmult[Rs])
-knitr::kable(QRexp,caption="Data Assimilation experiments")
+knitr::kable(QRexp,caption="Data Assimilation experiments. Experiment = experiment number, Qmult = Process error multiplier, Rmult = Observation error multiplier.")
 ```
