--- a/results.Rmd
+++ b/results.Rmd
@@ -53,7 +53,7 @@ for(i in 1:3){
 }
 ```
 
-```{r sssdBi,echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, results='hide', fig.asp=1,fig.width=6, fig.cap="Experiment 2: Forecast and Analysis ensembles at the disturbance (t=10). Arrows demonstrate the ensemble adjustment of a sample of 10 ensemble members."}
+```{r sssdBi,echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, results='hide', fig.asp=1,fig.width=6, fig.cap="Experiment 2: Forecast and Analysis ensembles at the disturbance (t=10). Red lines indicate observation error (±1 S.D.). Arrows demonstrate the ensemble adjustment of a sample of 10 ensemble members."}
 ## for html set fig.width=3
 load("exp2.Rdata")
 
@@ -304,7 +304,7 @@ for(i in 1:2){
 }
 ```
 
-In total we assimilated 365 example AGB time series from our central Oregon study region, with 81 coming from undisturbed sites and 78, 88, 92, and 17 coming from clear cuts, fires, forest pests, and other disturbances, respectively. Initial applications of the Multinomial filter exhibited high rates of filter divergence, with a coverage of only `r format(stats[[1]]$div.cov*100,digits=3)`% of the observations falling within the Analysis 95% CI at the end of the timeseries. Filter divergence is a known issue for Kalman Filters, not something unique to our Multinomial filter, and results from the model becoming falsely overconfident in itself such that it ignores, and diverges from, the data. Figure \@ref(fig:oregon) a demonstates an example of this for a site that experienced a forest fire in 1999, yet the model continues to believe the site is undisturbed. Across sites the magnitude of filter divergence observed was negatively correlated with the amount of biomass at the end of the timeseries (Figure \@ref(fig:oregon) b, p < `r format(anova(div.reg[[1]])$"Pr(>F)"[1],digits=3,scientific=TRUE)`). In other words, sites with low final biomass (i.e., large previous disturbance) showed a larger divergence and the divergence declined as the final biomass increased. Divergence also varied by disturbance type (p < `r format(anova(div.class[[1]])$"Pr(>F)"[2],digits=3,scientific=TRUE)`), with clear cuts having the lowest divergence for a given disturbance size and forest pests being lower than the fires and "other". Despite the issue of filter divergence there was still a positive relationship between disturbance magnitude and the posterior probability of detecting disturbance (Figure \@ref(fig:oregon) c, p < `r format(summary(dist.qb.abs[[1]])$coefficients[2,4],digits=3,scientific=TRUE)`). However, detection was rarely successful for AGB disturbances that removed less than 7.5 $kgC/m^2$ and did not exceed 50% until disturbances were larger than `r bm=coef(dist.qb.abs[[1]]); format(-bm[1]/bm[2],digits=2)` $kgC/m^2$.
+In total we assimilated 365 example AGB time series from our central Oregon study region, with 81 coming from undisturbed sites and 78, 88, 92, and 17 coming from clear cuts, fires, forest pests, and other disturbances, respectively. Initial applications of the Multinomial filter exhibited high rates of filter divergence, with a coverage of only `r format(stats[[1]]$div.cov*100,digits=3)`% of the observations falling within the Analysis 95% CI at the end of the timeseries. Filter divergence is a known issue for Kalman Filters, not something unique to our Multinomial filter, and results from the model becoming falsely overconfident in itself such that it ignores, and diverges from, the data [@kalnay2003; @lewis2006]. Figure \@ref(fig:oregon) a demonstates an example of this for a site that experienced a forest fire in 1999, yet the model continues to believe the site is undisturbed. Across sites the magnitude of filter divergence observed was negatively correlated with the amount of biomass at the end of the timeseries (Figure \@ref(fig:oregon) b, p < `r format(anova(div.reg[[1]])$"Pr(>F)"[1],digits=3,scientific=TRUE)`). In other words, sites with low final biomass (i.e., large previous disturbance) showed a larger divergence and the divergence declined as the final biomass increased. Divergence also varied by disturbance type (p < `r format(anova(div.class[[1]])$"Pr(>F)"[2],digits=3,scientific=TRUE)`), with clear cuts having the lowest divergence for a given disturbance size and forest pests being lower than the fires and "other". Despite the issue of filter divergence there was still a positive relationship between disturbance magnitude and the posterior probability of detecting disturbance (Figure \@ref(fig:oregon) c, p < `r format(summary(dist.qb.abs[[1]])$coefficients[2,4],digits=3,scientific=TRUE)`). However, detection was rarely successful for AGB disturbances that removed less than 7.5 $kgC/m^2$ and did not exceed 50% until disturbances were larger than `r bm=coef(dist.qb.abs[[1]]); format(-bm[1]/bm[2],digits=2)` $kgC/m^2$.
 
 The causes of filter divergence are known to be some combination of model overconfidence (e.g., insufficient process error, Q) and high observation error (R) in the data. As described in the Methods we ran additional computational experiments where we varied Q and R (\@ref(tab:QRexp)) to verify that without filter divergence the Multinomial filter was able to capture real-world disturbances and to assess what level of variance inflation was required to do so. Figure \@ref(fig:oregon) d-f show the results for Experiment 2, where we reduced the observation error, R. In this experiment we see that the data assimilation follows the observations closely, with a much tighter interval estimate, and is able to catch the disturbance event (Figure \@ref(fig:oregon) d). We also see a much lower incidence of filter divergence across sites, with a posterior coverage at the final timestep of `r format(stats[[2]]$div.cov*100,digits=3)`%, (Figure \@ref(fig:oregon) e). Divergence is no longer significantly affected by disturbance magnitude (p < `r format(summary(div.class[[2]])$coefficients[2,4],digits=3)`) and the only significant effect of disturbance type was a small reduction in divergence for clearcuts (p < `r format(summary(div.class[[2]])$coefficients[3,4],digits=3)`). Most importantly, detection probabilities were strongly related to disturbance magnitude (Figure \@ref(fig:oregon) f), with the Multinomial filter successfully detecting disturbances that removed more than `r bm=coef(dist.qb.abs[[2]]); format(-bm[1]/bm[2],digits=2)` $kgC/m^2$.
 
