--- a/supplemental.Rmd
+++ b/supplemental.Rmd
@@ -47,10 +47,19 @@ legend("bottomright",legend=c("model","data"),pch=c(NA,"+"),lty=c(1,NA),col=1:2)
 
 
 ```{r parameters, echo=FALSE}
-param.names = c("LUE","GAMMA","tauS","tauW","Av","sd_NEE","sd_leaf","sd_wood")
-param.desc = c("Light Use Efficiency","Fraction of GPP allocated to autotrophic respiration","Soil C residence time","Wood C residence time","Fraction of NPP allocated to leaves","NEE standard deviation","leaf C standard deviation","wood C standard deviation")
-param.table = cbind(param.names,param.desc,format(mle$par,digits=3,scientific=TRUE))
-colnames(param.table) <- c("Parameter","Description","Value")
-knitr::kable(param.table,caption="Calibrated model parameters")
+parSel = c(3, 4, 6, 7, 8,9:11)
+refPars <- BayesianTools::VSEMgetDefaults()
+
+param.values = rep(NA,11)
+param.values[seq_along(refPars[,1])] = refPars[,1]
+param.values[parSel] = mle$par
+param.names = c(row.names(refPars)[-(9:11)],"sd_NEE","sd_leaf","sd_wood") #c("LUE","GAMMA","tauS","tauW","Av","sd_NEE","sd_leaf","sd_wood")
+param.desc = c("Light extinction coefficient (unitless)","Leaf area ratio (m2/kg)","Light Use Efficiency (kg C MJ-1 PAR)","Fraction of GPP allocated to autotrophic respiration (unitless)", "Leaf C residence time (days)","Soil C residence time (days)","Wood C residence time (days)","Fraction of NPP allocated to leaves (unitless)","NEE std deviation (kgC m-2 year-1)","leaf C std deviation (kgC m-1)","wood C std deviation (kgC m-1)")
+#c("Light Use Efficiency","Fraction of GPP allocated to autotrophic respiration","Soil C residence time","Wood C residence time","Fraction of NPP allocated to leaves","NEE standard deviation ","leaf C standard deviation","wood C standard deviation")
+calibrated = rep("Default",11)
+calibrated[parSel] = "Calibrated"
+param.table = cbind(param.names,param.desc,format(param.values,digits=3,scientific=TRUE),calibrated)
+colnames(param.table) <- c("Parameter","Description","Value","Type")
+knitr::kable(param.table,caption="Model parameters")
 ```
 
